--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,12 +15,19 @@ li {
     list-style: none;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
 .container {
+    width: 380px;
     border-radius: 15px;
     background-color: rgba(80, 78, 78, 0.671);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin-top: 50px;
     height: 100%;
